<resources>
    <string name="app_name">adchampagnetest</string>

    <!-- Common system messages -->
    <string name="double_back_to_exit">Нажмите еще раз для выхода</string>
    <string name="please_wait">Пожалуйста, подождите…</string>
    <string name="security_error">Отсутствуют необходимые разрешения</string>
    <string name="unknown_error">Произошла неизвестная ошибка</string>
    <string name="server_not_available_error">Сервер временно недоступен</string>
    <string name="network_error">Отсутствует подключение к сети</string>
    <string name="not_found_error">Запись не найдена</string>
    <string name="forbidden_error">Данное действие недоступно</string>
    <string name="unauthorized_error">Необходимо авторизоваться</string>
    <string name="internal_server_error">Ошибка на сервере</string>
    <string name="bad_request_error">Некорректный запрос</string>
    <string name="message_server_unavailable">Сервер недоступен. Попробуйте запустить приложение позже.</string>
    <string name="message_technical_works">Извините, в данный момент приложение недоступно. На сервере ведутся технические работы. Попробуйте запустить приложение позже.</string>
    <string name="message_update_available">Доступно обновление приложения. Рекомендуется установить обновление.</string>
    <string name="message_update_required">Данная версия приложения устарела. Необходимо установить обновление.</string>
    <string name="close_app">Закрыть приложение</string>
    <string name="open_google_play">Перейти в Google Play</string>
    <string name="continue_without_updating">Продолжить без обновления</string>
    <string name="btn_ok">Ок</string>
    <string name="btn_back">Назад</string>
    <string name="write_on_email">Написать на почту</string>
    <string name="open_folder">Открыть папку</string>
    <string name="open_file">Открыть файл</string>
    <string name="share">Поделиться</string>
    <string name="auth_title">Вход в аккаунт</string>
    <string name="auth_login_hint">E-mail</string>
    <string name="auth_password_hint">Пароль</string>
    <string name="auth_login_button">Войти</string>
    <string name="auth_recover_button">Сбросить пароль</string>
    <string name="auth_register_button">Регистрация</string>
    <string name="profile_title">Профиль</string>
    <string name="profile_logout_button">Выйти</string>
    <string name="required_field_error">Обязательное поле</string>
    <string name="error_invalid_mail">Некорректный адрес</string>
    <string name="message_auth_invalid">Неверно введен логин или пароль</string>
    <string name="message_register_failed">Ошибка создания записи</string>
    <string name="message_recover_failed">Ошибка восстановления пароля</string>
    <string name="recover_no_mail">Нет аккаунта с такой почтой</string>
    <string name="recover_success">Успешный сброс</string>
    <string name="message_register_duplicate">Пользователь с такой почтой уже существует</string>

    <!-- App strings section -->

</resources>