<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/baseline_grid_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/baseline_grid_big"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/authTitleView"
                    style="?attr/textAppearanceHeadlineLarge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/baseline_grid"
                    android:text="@string/auth_title"
                    app:layout_constraintEnd_toEndOf="@id/guideEnd"
                    app:layout_constraintStart_toStartOf="@id/guideStart"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/authLoginInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/baseline_grid_24"
                    android:hint="@string/auth_login_hint"
                    app:layout_constraintEnd_toEndOf="@id/guideEnd"
                    app:layout_constraintStart_toStartOf="@id/guideStart"
                    app:layout_constraintTop_toBottomOf="@id/authTitleView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/authLoginInputView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:nextFocusDown="@id/authPasswordInputView"
                        android:padding="@dimen/baseline_grid" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/authPasswordInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/baseline_grid"
                    android:hint="@string/auth_password_hint"
                    app:endIconMode="password_toggle"
                    app:layout_constraintEnd_toEndOf="@id/guideEnd"
                    app:layout_constraintStart_toStartOf="@id/guideStart"
                    app:layout_constraintTop_toBottomOf="@id/authLoginInputLayout"
                    tools:ignore="HardcodedText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/authPasswordInputView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:padding="@dimen/baseline_grid" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/authLoginButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/baseline_grid"
                    android:text="@string/auth_login_button"
                    app:layout_constraintEnd_toEndOf="@id/guideEnd"
                    app:layout_constraintStart_toStartOf="@id/guideStart"
                    app:layout_constraintTop_toBottomOf="@id/authPasswordInputLayout" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/authRecoverButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/baseline_grid_small"
                    android:layout_marginBottom="@dimen/baseline_grid"
                    android:gravity="center"
                    android:paddingVertical="@dimen/baseline_grid_small"
                    android:text="@string/auth_recover_button"
                    app:layout_constraintEnd_toEndOf="@id/guideEnd"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/guideStart"
                    app:layout_constraintTop_toBottomOf="@id/authLoginButton" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/authRegisterButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/baseline_grid_small"
                    android:layout_marginBottom="@dimen/baseline_grid"
                    android:gravity="center"
                    android:paddingVertical="@dimen/baseline_grid_small"
                    android:text="@string/auth_register_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/guideEnd"
                    app:layout_constraintStart_toStartOf="@id/guideStart"
                    app:layout_constraintTop_toBottomOf="@id/authRecoverButton"
                    app:layout_constraintVertical_bias="1" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/baseline_grid" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/baseline_grid" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="?attr/colorSecondary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>